--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=project
+
+# 데이터 소스 - MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aloha?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false&autoReconnection=true
+spring.datasource.username=aloha
+spring.datasource.password=123456
+
+# Mybatis 설정
+# mybatis.config-location=classpath:mybatis-config.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.aloha.project.dto
+mybatis.mapper-locations=classpath:project/mapper/**/**.xml
