--- a/project/build.gradle
+++ b/project/build.gradle
@@ -26,9 +26,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-security' // security
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-validation' // validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' // security
