--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -18,3 +18,8 @@ mybatis.mapper-locations=classpath:project/mapper/**/**.xml
 # 파일 업로드 설정
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
+
+# profile 프로퍼티 파일 포함하기
+# application-[프로필이름].properties
+# application-oauth-kakao.properties
+spring.profiles.include=oauth-kakao
