--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -29,3 +29,4 @@ kakaopay.secret-key=DEVC085543349485E7325060E7D812435918D5A2
 kakaopay.cid=TC0ONETIME
 kakaopay.ready-url=https://open-api.kakaopay.com/online/v1/payment/ready
 kakaopay.approve-url=https://open-api.kakaopay.com/online/v1/payment/approve
+kakaopay.cancel-url=https://open-api.kakaopay.com/online/v1/payment/cancel
